# TaskLoRA-Serve

./: .gitignore  EXPERIMENT_PLAN.md  Makefile  PROJECT_CODE_GUIDE.md  README.md  RUNBOOK.md  code_lo_ra_serve_project_plan.md  pyproject.toml  requirements-gateway.txt  requirements-vllm.txt  requirements.txt
benchmark/: __init__.py  analyze_results.py  loadgen.py  mixed_workload.yaml
configs/: benchmark.yaml  code_lora.yaml  eval.yaml  math_lora.yaml  model.yaml  serving.yaml
data/: README.md
data/examples/: codealpaca_sample.jsonl  gsm8k_test_sample.jsonl  gsm8k_train_sample.jsonl
deploy/: docker-compose.yaml
evaluation/: __init__.py  eval_base_vs_lora.py  eval_math.py  eval_mbpp.py  eval_utils.py
observability/: __init__.py  metrics.py  prometheus.yml
registry/: __init__.py  adapters.yaml  model_registry.py
report/: architecture.md  benchmark_report.md  eval_report.md  training_report.md
scripts/: __init__.py  validate_project.py
serving/: __init__.py  gateway.py  mock_vllm.py  request_schema.py  router.py  vllm_backend.py
tests/: smoke_test.py
training/: __init__.py  build_dataset.py  train_qlora.py  train_utils.py
