[project]
name = "tasklora-serve"
version = "0.1.0"
description = "Multi-task LoRA fine-tuning, evaluation, vLLM serving, routing, benchmarking, and metrics."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

